Fix ally level container alignment.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -50,7 +50,7 @@
 }
 
 #allyLevelContainer image {
-  y: 56%;
+  y: 186;
 }
 
 #enemyLevelContainer image {
